号码商完善

--- a/Application/Admin/View/PoolProvider/index.html
+++ b/Application/Admin/View/PoolProvider/index.html
@@ -12,6 +12,29 @@
                 </div>
             </div>
             <div class="ibox-content">
+                    <form class="layui-form" action="" method="get" autocomplete="off">
+                            <input type="hidden" name="m" value="<{$model}>">
+                            <input type="hidden" name="c" value="User">
+                            <input type="hidden" name="a" value="index">
+                            <input type="hidden" name="p" value="1">
+                            <div class="layui-form-item">
+                                <div class="layui-inline">
+                                    <div class="layui-input-inline">
+                                        <input type="text" name="k" autocomplete="off" placeholder="名称/联系人/电话" class="layui-input" value="<{$param['k']}>">
+                                    </div>
+                                </div>
+
+    
+                                <div class="layui-inline">
+                                    <button type="submit" class="layui-btn"><span
+                                            class="glyphicon glyphicon-search"></span> 搜索
+                                    </button>
+                                    <a href='javascript:;' id="export"
+                                       class="layui-btn layui-btn-danger"><span
+                                            class="glyphicon glyphicon-export"></span> 导出</a>
+
+                            </div>
+                        </form>
                 <!--号码商列表-->
                 <div class="layui-field-box">
                 <table class="layui-table">
@@ -19,9 +42,14 @@
                     <tr>
                         <th>#</th>
                         <th>名称</th>
+                        <th>联系人</th>
+                        <th>联系电话</th>
+                    <if condition="$param.status gt 0 ">
                         <th>appkey</th>
                         <th>总收入</th>
                         <th>余额</th>
+                    </if>
+                        <th>状态</th>
                         <th>添加时间</th>
                         <th>操作</th>
                     </tr>
@@ -31,15 +59,28 @@
                         <tr>
                             <td><{$v.id}></td>
                             <td><{$v.name}></td>
+                            <td><{$v.contact}></td>
+                            <td><{$v.contact_tel}></td>
+                        <if condition="$param.status gt 0 ">
                             <td><{$v.appkey}></td>
                             <td><{$v.money}></td>
                             <td><{$v.balance}></td>
+                        </if>
+                            <td>
+                                <if condition="$v.status eq 0 ">未认证
+                                        <elseif condition="$v.status eq 1"/>正常
+                                    <else /> 已关闭
+                                    </if>
+                            </td>
                             <td><{$v.create_time|date='Y-m-d H:i:s',###}></td>
                             <td>
+                            <if condition="$param.status gt 0 ">
                                 <a onclick="reset('<{$v[id]}>')" class="layui-btn layui-btn-danger layui-btn-mini"><i class="layui-icon">&#xe640;</i>重置密钥</a>
+                                <a onclick="x_admin_show('余额加钱', '<{:U('PoolProviderMoney/AddProviderBalance',['id'=>$v[id]])}>',540,440)" class="layui-btn layui-btn-danger layui-btn-mini"><i class="layui-icon">&#xe640;</i>加钱</a>
+                            </if>
                                 <a onclick="edit('编辑号码商','<{:U('PoolProvider/edit',['id'=>$v[id]])}>',540,440)" class="layui-btn layui-btn-mini layui-btn-normal"><i class="layui-icon">&#xe642;</i>编辑</a>
                                 <a onclick="del(this,'<{$v[id]}>')" class="layui-btn layui-btn-danger layui-btn-mini"><i class="layui-icon">&#xe640;</i>删除</a>
-                                <a onclick="x_admin_show('余额加钱', '<{:U('PoolProviderMoney/AddProviderBalance',['id'=>$v[id]])}>',540,440)" class="layui-btn layui-btn-danger layui-btn-mini"><i class="layui-icon">&#xe640;</i>加钱</a>
+                                
                             </td>
                         </tr>
                     </volist>
@@ -102,6 +143,11 @@
     function show(title,url,w,h){
         x_admin_show(title,url,w,h);
     }
+
+    $('#export').on('click',function(){
+        window.location.href
+            ="<{:U('Admin/User/exportuser',array('username'=>$_GET[username],'parentid'=>$_GET[parentid],'status'=>$_GET[status],'authorized'=>$_GET[authorized],'groupid'=>$_GET[groupid],'regdatetime'=>$_GET[regdatetime],'isagent'=>0))}>";
+    });
 </script>
 </body>
 </html>
