--- a/Application/Admin/View/PoolProvider/edit.html
+++ b/Application/Admin/View/PoolProvider/edit.html
@@ -7,15 +7,36 @@
         <label class="layui-form-label">名称：</label>
         <div class="layui-input-inline">
           <input type="text" name="name" value="<{$info['name']}>" lay-verify="required" placeholder="请输入用户名" autocomplete="off"  id="name" class="layui-input">
-          <input type="hidden" name="id" value="<{$info.id}>" />
+          
         </div>
       </div>
+      <div class="layui-form-item">
+        <label class="layui-form-label">联系人：</label>
+        <div class="layui-input-inline">
+            <input type="text" name="contact" value="<{$info['contact']}>" lay-verify="required" placeholder="请输入联系人" autocomplete="off"  id="name" class="layui-input">
+        </div>
+    </div>
+    <div class="layui-form-item">
+        <label class="layui-form-label">联系电话：</label>
+        <div class="layui-input-inline">
+            <input type="text" name="contact_tel" value="<{$info['contact_tel']}>" lay-verify="required" placeholder="请输入联系人电话" autocomplete="off"  id="name" class="layui-input">
+        </div>
+    </div>
+    <div class="layui-form-item">
+        <label class="layui-form-label">状态：</label>
+        <div class="layui-col-md12">  
+            <input type="radio" name="status" value="1" title="已认证" <if condition="$info.status eq 1 ">checked</if>>
+            <input type="radio" name="status" value="0" title="未认证" <if condition="$info.status eq 0 ">checked</if>>
+            <input type="radio" name="status" value="2" title="已关闭" <if condition="$info.status eq 2 ">checked</if>>
+        </div>
+    </div>
      
 
       <div class="layui-form-item">
         <div class="layui-input-block">
-          <button class="layui-btn" lay-submit lay-filter="info">立即提交</button>
-          <button type="reset" class="layui-btn layui-btn-primary">重置</button>
+            <input type="hidden" name="id" value="<{$info.id}>" />
+            <button class="layui-btn" lay-submit lay-filter="info">立即提交</button>
+            <button type="reset" class="layui-btn layui-btn-primary">重置</button>
         </div>
       </div>
     </form>
