--- a/Application/Admin/View/Index/main.html
+++ b/Application/Admin/View/Index/main.html
@@ -69,7 +69,7 @@
     </div>
   </div>
     
-  <div class="col-sm-4" style="height: 140px">
+  <div class="col-sm-4">
     <div class="ibox float-e-margins">
       <div class="ibox-title">
         <h5><{$stat.todaymemberprofit}></h5>
@@ -81,7 +81,7 @@
     </div>
   </div>
     
-  <div class="col-sm-4" style="height: 140px">
+  <div class="col-sm-4">
     <div class="ibox float-e-margins">
       <div class="ibox-title">
         <h5><{$stat.todayplatformincome}></h5>
@@ -92,6 +92,33 @@
       </div>
     </div>
   </div>
+
+  
+
+  <div class="col-sm-4">
+      <div class="ibox float-e-margins">
+        <div class="ibox-title">
+          <h5><{$stat.doing}></h5>
+        </div>
+        <div class="ibox-content" style="padding-top:0;height: 67px">
+          <h1 class="no-margins">当前充值中订单量</h1>
+          <i class="iconfont icon-qianbao" style="color: #edf7fe;"></i>
+        </div>
+      </div>
+    </div>
+      
+    <div class="col-sm-4" style="height: 140px">
+      <div class="ibox float-e-margins">
+        <div class="ibox-title">
+          <h5><{$stat.waiting}></h5>
+        </div>
+        <div class="ibox-content" style="padding-top:0;height: 67px">
+          <h1 class="no-margins">当前等待充值订单量</h1>
+          <i class="iconfont icon-shourusel" style="color: #fff6f0;"></i>
+        </div>
+      </div>
+    </div>
+    
  
     
 
