--- a/Application/Admin/View/Order/info.html
+++ b/Application/Admin/View/Order/info.html
@@ -11,8 +11,7 @@
             <tr><td width="30%">平台订单号：</td><td><strong class="text-success"><{$info.pay_orderid}></strong></td></tr>
             <tr><td>商户订单号：</td><td><strong class="text-success"><{$info.out_trade_id}></strong></td></tr>
             <tr><td>流水单号：</td><td><strong class="text-success"><{$info.trade_id}></strong></td></tr>
-            <tr><td>手机号：</td><td><{$info.phone}> （<{$sp_list[$info['sp']]}>）</td></tr>
-            <tr><td>交易通道：</td><td><{$info.pay_name}></td></tr>
+            <tr><td>支付方式：</td><td><{$info.pay_name}></td></tr>
             <tr><td>金额：</td><td><{$info.pay_amount}></td></tr>
 
             <tr><td>订单金额：</td><td><strong class="text-danger"><{$info.pay_amount}></strong></td></tr>
