优化商户登陆

--- a/Application/Home/View/view4/Index/userLogin.html
+++ b/Application/Home/View/view4/Index/userLogin.html
@@ -45,24 +45,24 @@
 <body>
 <div class="header  bj-3d7bf8">
     <div class="wrapper">
-        <div class="logo">
-            <a href="index.html"><img src="<{$logo}>"/></a>
-        </div>
-        <div class="nav-wrap">
+        <!--<div class="logo">-->
+            <!--<a href="index.html"><img src="<{$logo}>"/></a>-->
+        <!--</div>-->
+        <div class="nav-wrap" style="display: none">
             <div class="nav">
                 <ul>
                     <li class="home_index">
                        <strong><a href="/">首页 </a></strong>
                     </li>
-                    <li>
-                        <strong><a href="#">产品中心<i class="iconfont icon-jiantou8"></i></a></strong>
-                        <dl>
-                            <dd><a href="<{$products}>#pro1">聚合收款</a></dd>
-                            <dd><a href="<{$products}>#pro2">子商户系统</a></dd>
-                            <dd><a href="<{$products}>#pro3">代付系统</a></dd>
-                            <dd><a href="<{$products}>#pro4">二维码支付</a></dd>
-                        </dl>
-                    </li>
+                    <!--<li>-->
+                        <!--<strong><a href="#">产品中心<i class="iconfont icon-jiantou8"></i></a></strong>-->
+                        <!--<dl>-->
+                            <!--<dd><a href="<{$products}>#pro1">聚合收款</a></dd>-->
+                            <!--<dd><a href="<{$products}>#pro2">子商户系统</a></dd>-->
+                            <!--<dd><a href="<{$products}>#pro3">代付系统</a></dd>-->
+                            <!--<dd><a href="<{$products}>#pro4">二维码支付</a></dd>-->
+                        <!--</dl>-->
+                    <!--</li>-->
                     <!-- <li>
                         <strong><a href="/home/index/help.html">帮助中心</a></strong>
                     </li> -->
@@ -70,18 +70,18 @@
                         <strong><a href="#">开发者中心<i class="iconfont icon-jiantou8"></i></a></strong>
                         <dl>
                            <dd><a href="/demo">DEMO体验</a></dd>
-                            <dd><a href="<{$document}>">API开发文档</a></dd>
+                            <!--<dd><a href="<{$document}>">API开发文档</a></dd>-->
                         </dl>
                     </li>
                     <!---->
-              <li>
-                        <strong><a href="#">业务登陆<i class="iconfont icon-jiantou8"></i></a></strong>
-                        <dl>
-                           <dd><a href="<{$user_login}>">商户登录</a></dd>
-                            <dd><a href="<{$agent_login}>">代理登陆</a></dd>
-                        </dl>
+              <!--<li>-->
+                        <!--<strong><a href="#">业务登陆<i class="iconfont icon-jiantou8"></i></a></strong>-->
+                        <!--<dl>-->
+                           <!--<dd><a href="<{$user_login}>">商户登录</a></dd>-->
+                            <!--<dd><a href="<{$agent_login}>">代理登陆</a></dd>-->
+                        <!--</dl>-->
 
-                   </li>
+                   <!--</li>-->
                 </ul>
             </div>
             <div class="btns">
